--- a/TeachSystem/Properties/Resources.resx
+++ b/TeachSystem/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="defaultUserImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\defaultUserImage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="falseIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\falseIco.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="logoYSTU" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoYSTU.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -132,5 +135,8 @@
   </data>
   <data name="testIco1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\testIco.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="trueIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\trueIco.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
